[package]
name = "tfjs-backend-wasm"
version = "0.1.0"
authors = ["Nikhil Thorat <nsthorat@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-cli = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Tell `rustc` to optimize for speed. By default it optimizes for code size.
opt-level = 3
# Tell LLVM to inline and prune functions. The downside is that compilation will
# take longer. Source: https://rustwasm.github.io/book/reference/code-size.html
lto = true
